# Zeutara

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: 01-priya-shah-acme-logistics.json  02-marcus-wei-stellar-freight.json  03-aisha-okafor-routelane.json  04-david-park-cargosense.json  05-elena-volkov-trakr.json  06-jordan-bell-payloop.json  07-sam-rivera-flexbroker.json  08-hudson-grant-ledgerlane.json  09-rachel-gold-shipsharp.json  10-noor-haddad-portpilot.json
src/zeutara_engine/: __init__.py  classify.py  cli.py  llm.py  normalize.py  schemas.py  score.py
src/zeutara_engine/prompts/: classify.txt  personalize.txt
tests/: test_score.py
